tests/golden/errors/complex_mixed_runtime.py
def f(x: int) -> None:
    z = 2j
    print(z + x)
f(1)
